src/ceal/tests/bug/908.gold
Error: (line 3:4 '~') Invalid tilde - use $enc() instead
